# superwasp-talon

./: CMakeLists.txt  Makefile  README.md  superwasp-talon.spec
archive/: CMakeLists.txt
archive/config/: csimc.cfg  dome.cfg  gpsd.cfg  home.cfg  telescoped.cfg  telsched.cfg
install_scripts/: CMakeLists.txt
src/: CMakeLists.txt
src/daemons/: CMakeLists.txt
src/daemons/csimcd/: CMakeLists.txt  csimcd.c
src/daemons/rund/: CMakeLists.txt  rund.c
src/daemons/shmd/: CMakeLists.txt  shmd.c
src/daemons/telescoped/: CMakeLists.txt  README  axes.c  csimc.c  dome.c  fifoio.c  filter.c  focus.c  lights.c  mountcor.c  powerfail.c  tel.c  teled.h  telescoped.c  virmc.c  virmc.h
src/libs/: CMakeLists.txt
src/libs/astro/: CMakeLists.txt  P_.h  README  aa_hadec.c  aberration.c  actan.c  airmass.c  anomaly.c  ap_as.c  astro.h  auxil.c  chap95.c  chap95.h  chap95_data.c  circum.c  circum.h  comet.c  dbfmt.c  deep.c  deepconst.h  deltat.c  earthsat.c  eq_ecl.c  eq_gal.c  formats.c  helio.c  libration.c  misc.c  mjd.c  moon.c  mooncolong.c  nutation.c  obliq.c  parallax.c  plans.c  precess.c  preferences.h  reduce.c  refract.c  riset.c  (+15 more)
src/libs/fits/: CMakeLists.txt
src/libs/fli/: .depend  CMakeLists.txt  fli.h  libfli.c  libfli.h
src/libs/fs/: CMakeLists.txt
src/libs/misc/: CMakeLists.txt  README  catalogs.c  catalogs.h  ccdcamera.c  ccdcamera.h  cliserv.c  cliserv.h  configfile.c  configfile.h  crackini.c  crackini.h  csimc.c  csimc.h  dio.h  focustemp.c  funcmax.c  gaussfit.c  lstsqr.c  lstsqr.h  misc.c  misc.h  newton.c  pc39.h  photstd.c  photstd.h  rot.c  rot.h  running.c  running.h  scan.c  scan.h  strops.c  strops.h  telaxes.c  telenv.c  telenv.h  telfits.c  telfits.h  telstatshm.h  (+2 more)
src/libs/wcs/: CMakeLists.txt
src/libs/xmisc/: CMakeLists.txt  catbrowse.c  catbrowse.h  xtools.c  xtools.h
src/scripts/: CMakeLists.txt  killp
src/utils/: CMakeLists.txt
src/utils/csimc/: CMakeLists.txt  README  boot.c  csimc.c  csimcio.c  el.c  el.h  mc.h
src/utils/getshm/: CMakeLists.txt
src/utils/xobs/: CMakeLists.txt  README  autofocus.c  batch.c  calaxes.c  cli.c  cli.h  clicommands.c  clicommands.h  clitypes.h  cliutil.c  cliutil.h  config.c  control.c  dome.c  fifos.c  gui.c  paddle.c  query.c  scope.c  skymap.c  sound.c  telrun.c  tips.c  update.c  util.c  util.h  widgets.h  xephem.c  xobs.c  xobs.h
